# dots-and-boxes

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENCE.txt  README.md  affichage.py  algos.py  fonctions_de_jeu.py  main.py  package-lock.json  pyproject.toml
.github/workflows/: ci.yml  python-tests.yml  release.yml
docs/: conf.py  index.rst
docs/tutorial/: tutorial.md
dots_and_boxes/: affichage.py  algos.py  fonctions_de_jeu.py  logger.py  main.py
tests/: test_fonctions_de_jeu.py
