[tool.poetry]
name = "dots-and-boxes"
version = "1.0.0"
description = "Jeu Dots and Boxes avec une interface graphique en Python (pygame)."
authors = ["Antoine Dumont"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.6.1"
numpy = "^2.1.3"

[tool.poetry.group.dev.dependencies]
pygame = "^2.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dots-and-boxes = "dots_and_boxes.main:main"
