[tool.poetry]
name = "dots-and-boxes"
version = "1.0.0"
description = "Jeu Dots and Boxes avec une interface graphique en Python (pygame)."
authors = ["Antoine Dumont"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
pygame = "^2.6.1"

[tool.poetry.dev-dependencies]
flake8 = "^6.0"  # Ajout de Flake8 pour l'analyse statique du code
pre-commit = "^3.0"  # Ajout de pre-commit pour automatiser l'exécution de Flake8 avant chaque commit

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dots-and-boxes = "dots_and_boxes.main:main"
